hphp/hack/test/typecheck/expression_trees_not_virtualize_functions/nullsafe_property_access.php.exp
File "nullsafe_property_access.php", line 7, characters 12-23:
Expression Trees do not support nullsafe property access (Parsing[1002])
